fix collapsed images hiding images on 559 instead of 550 in order to avoid image collapsing when screen width is between 550 and 560

--- a/listeomid.org/media/css/skeleton.css
+++ b/listeomid.org/media/css/skeleton.css
@@ -1005,7 +1005,7 @@ hr {
 
 /* Larger than phablet (also point when grid becomes active) */
 
-@media (max-width: 550px) {
+@media (max-width: 559px) {
   .logo img{width: 350px;height: 182px;}
   .header .khatami {display: none}
   .header .rouhani {display: none}
